AC_INIT([nautilus-filename-repairer], [0.0.2], [choe.hwanjin@gmail.com], [nautilus-filename-repairer])
AC_CONFIG_SRCDIR([Makefile.am])
AC_CONFIG_HEADERS(config.h)
AM_INIT_AUTOMAKE([dist-bzip2])

# Checks for programs.
AC_PROG_CC
AC_DISABLE_STATIC
IT_PROG_INTLTOOL([0.35.0])
AC_PROG_LIBTOOL
PKG_PROG_PKG_CONFIG

AH_TEMPLATE([GETTEXT_PACKAGE], [Package name for gettext])
GETTEXT_PACKAGE=nautilus-filename-repairer
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE")
AC_SUBST(GETTEXT_PACKAGE)
AM_GLIB_GNU_GETTEXT

AC_SUBST(CFLAGS)
AC_SUBST(CPPFLAGS)
AC_SUBST(LDFLAGS)

NAUTILUS_REQUIRED=2.6.0
GTK_REQUIRED=2.6.0
GNOMEVFS_REQUIRED=2.6.0

PKG_CHECK_MODULES(NAUTILUS, libnautilus-extension >= $NAUTILUS_REQUIRED gtk+-2.0 >= $GTK_REQUIRED gnome-vfs-2.0 >= $GNOMEVFS_REQUIRED)
AC_SUBST(NAUTILUS_CFLAGS)
AC_SUBST(NAUTILUS_LIBS)

PKG_CHECK_MODULES(nautilus_version_check, libnautilus-extension <= 2.20.0, [
AC_DEFINE_UNQUOTED(NEED_NAUTILUS_WORK_AROUND, 1, [nautilus work around])
])

AC_CONFIG_FILES([Makefile
		 src/Makefile
		 po/Makefile.in])

AC_OUTPUT
